<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/unscramble"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/corner_radius_10"
        android:backgroundTint="@color/view_background_color"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/counterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="36dp"
            android:background="@drawable/corner_radius_10"
            android:backgroundTint="@color/primary_color"
            android:fontFamily="@font/roboto_medium"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="1/10" />

        <TextView
            android:id="@+id/shuffledWordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_regular"
            android:textSize="44sp"
            tools:text="lamina" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/clue" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorIconDrawable="@null"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText"
                android:layout_width="match_parent"
                android:hint="@string/enter_your_word"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/skipButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/skip"
        android:textColor="@color/primary_color"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/scoreLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_radius_10"
        android:backgroundTint="@color/view_background_color"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:text="@string/score"
            android:textColor="@color/text_color"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            tools:text="100" />
    </LinearLayout>

</LinearLayout>