<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createGameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/unscramble"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/corner_radius_10"
        android:backgroundTint="@color/view_background_color"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_regular"
            android:freezesText="true"
            android:text="@string/enter_number_of_words"
            android:textSize="24sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/black"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:inputType="number"
                android:backgroundTint="@color/white"
                android:text="2" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:visibility="gone"
        tools:text="No internet connection!" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBarr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:trackColor="@color/primary_color" />

    <TextView
        android:id="@+id/loadingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/loading_data"
        android:textColor="@color/text_color"
        android:visibility="gone" />

    <com.github.k0dm.unscramble.game.presentation.SubmitButton
        android:id="@+id/startGameButton"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:backgroundTint="@color/primary_color"
        android:text="@string/start_game"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <com.github.k0dm.unscramble.game.presentation.SubmitButton
            android:id="@+id/retryButton"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/retry"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:visibility="gone" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="22dp"
            android:layout_marginBottom="22dp"
            android:stepSize="1.0"
            android:valueFrom="2.0"
            android:valueTo="20.0"
            app:haloColor="@color/primary_color"
            app:thumbColor="@color/primary_color"
            app:tickColor="@color/primary_color"
            app:trackColorActive="@color/primary_color" />
    </LinearLayout>
</LinearLayout>